examples/test/testpolicy16125.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16125
  namespace: namespace282
spec:
  podSelector:
    matchLabels:
      key35: value3
      key42: value38
      key13: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value37
          key30: value27
          key8: value14
